[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "misp-module-flowtriq"
version = "1.0.0"
description = "MISP modules for Flowtriq DDoS intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Flowtriq", email = "support@flowtriq.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://flowtriq.com"
Repository = "https://github.com/flowtriq/flowtriq-misp"

[tool.setuptools.packages.find]
include = ["misp_modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
